# Twig

./: .gitignore  CMakeLists.txt
lemon/: CMakeLists.txt
src/: filetemplateloader.cpp  memorytemplateloader.cpp  memorytemplateloader.hpp  templateengine.cpp  templateerror.cpp  templateloader.cpp  templateloader.hpp  templateprogram.cpp
src/grammar/: twig.y
src/nuria/: filetemplateloader.hpp  memorytemplateloader.hpp  templateengine.hpp  templateerror.hpp  templateloader.hpp  templateprogram.hpp  twig_global.hpp
src/private/: astnodes.cpp  astnodes.hpp  builtins.cpp  builtins.hpp  compiler.cpp  compiler.hpp  parser.cpp  parser.hpp  templateengine_p.hpp  tokenizer.cpp  tokenizer.hpp  variableaccessor.cpp  variableaccessor.hpp
tests/: tst_builtins.cpp  tst_filetemplateloader.cpp  tst_filetemplateloader_resources.qrc  tst_memorytemplateloader.cpp  tst_templateengine.cpp  tst_templateengine_caching.cpp  tst_templateengine_resources.qrc  tst_templateloader.cpp  tst_templatetokenizer.cpp  tst_variableaccessor.cpp
tests/test-cases/: README.md  block-autoescape.json  block-embed.json  block-filter.json  block-spaceless.json  chained-variable.json  choose-existing-include.json  constant-expression.json  constant-if-clause-false.json  constant-if-clause.json  constant-ternary-operator.json  dont-fold-variable-else.json  dont-fold-variable-happy.json  error-bad-endblock-name.json  error-empty-template-name-array.json  error-empty-template-name.json  error-invalid-escape-mode-compiler.json  error-invalid-escape-mode-renderer.json  error-invalid-regular-expression.json  error-no-parent-block-initial.json  error-no-parent-block-outside.json  error-non-constant-expression.json  error-syntax-error.json  error-template-not-found-include.json  error-template-not-found-main.json  error-variable-not-set.json  expansion.json  expression.json  extend.json  filter-abs.json  filter-reverse-list.json  filter-reverse-string.json  for-else-branch-list.json  for-else-branch-map.json  for-loop-list-if.json  for-loop-list-loop-variable.json  for-loop-list.json  for-loop-map-if.json  for-loop-map-only-value.json  for-loop-map.json  (+41 more)
